@@ -39,6 +39,7 @@ require('picker/reviver')
 require('picker/tools')
 require('picker/blueprinter')
 require('picker/bpmirror')
+require('picker/bpsnap')
 require('picker/planners')
 require('picker/zapper')
 require('picker/dollies')
