@@ -18,3 +18,27 @@ picker-clean-empty-bps-in-book=Remove empty blueprints from book
 
 [item-name]
 picker-bp-updater=Blueprint Updater
+
+[mod-setting-name]
+picker-bp_updater-version-increment=Increment version when updating blueprints (normal)
+picker-bp-updater-alt-version-increment=Increment version when updating blueprints (alternate)
+picker-bp-snap=Enable Blueprint edge snapper.
+picker-bp-snap-cardinal-center=Snap to edge centers blueprint first
+picker-bp-snap-horizontal-invert=Invert horizontal axis when snapping
+picker-bp-snap-vertical-invert=Invert vertical axis when snapping
+
+[mod-setting-description]
+picker-bp-updater-version-increment=Blueprint Extensions can add a version number to blueprints it updates.\n\nOFF: Blueprint labels are always copied as-is.\n\nIF PRESENT: A blueprint label ending in "v.###" or "v###" will have the version number incremented.\n\nALWAYS: Like IF PRESENT, but "v.2" will be added to blueprint labels if no version number is present.\n\nThis setting only applies when using regular mouse drag to select the new blueprint area.
+picker-bp-updater-alt-version-increment=Blueprint Extensions can add a version number to blueprints it updates.\n\nOFF: Blueprint labels are always copied as-is.\n\nIF PRESENT: A blueprint label ending in "v.###" or "v###" will have the version number incremented.\n\nALWAYS: Like IF PRESENT, but "v.2" will be added to blueprint labels if no version number is present.\n\nThis setting applies when using SHIFT + drag to select the new blueprint area.
+picker-bp-snap=Enable Blueprint edge snapper.
+picker-bp-snap-cardinal-center=ON: Snapping to an edge centers the blueprint on the opposite axis.\nOFF: Snapping to an edge does not move the blueprint on the opposite axis.\n\nSetting this to OFF means that snapping to North + snapping to East is the same effect as snapping to Northeast, useful if you have limited keybind space (e.g. no numpad).
+picker-bp-snap-horizontal-invert=Snap to East/West moves that edge of the blueprint to under the cursor rather than aligning the blueprint to that edge.
+picker-bp-snap-vertical-invert=Snap to North/South moves that edge of the blueprint to under the cursor rather than aligning the blueprint to that edge.
+
+[string-mod-setting]
+picker-bp-updater-version-increment.off=off
+picker-bp-updater-version-increment.auto=if present
+picker-bp-updater-version-increment.on=always
+picker-bp-updater-alt-version-increment.off=off
+picker-bp-updater-alt-version-increment.auto=if present
+picker-bp-updater-alt-version-increment.on=always
