@@ -31,6 +31,7 @@ picker-tool-tape-measure=Enable tape measure tool
 picker-tool-ore-eraser=Enable ore eraser tool
 picker-tool-camera=Enable screenshot camera tool
 picker-tool-ping=Enable ping tool
+picker-tool-bp-updater=Enable blueprint updater
 
 [mod-setting-description]
 picker-item-zapper=Space seperated list of item names that will be zapped into the nether when dropping them with __CONTROL__drop-cursor__ key.
@@ -65,3 +66,4 @@ picker-tool-tape-measure=Enable tape measure tool.
 picker-tool-ore-eraser=Enable ore eraser tool.
 picker-tool-camera=Enable screenshot camera tool.
 picker-tool-ping=Enable ping tool.
+picker-tool-bp-updater=Enable blueprint updater.
